# CliqueAI

./: .gitignore  Makefile  README.md  edges.py  pyproject.toml  setup.py  test.py  test_algorithm.py
CliqueAI/: miner.py
data/: maximum_clique_001961e2-a89c-4fe4-b461-4b2cf96baf92.json  maximum_clique_0024a34e-d2a8-4113-8471-c6789a592796.json  maximum_clique_002a4be2-5e03-4820-b3b8-8d175abc9aad.json  maximum_clique_002b9f45-4d03-4ac4-8a5c-d551006bdd28.json  maximum_clique_00324461-bb6b-41dd-98a5-fb7407b3de40.json  maximum_clique_006ce926-9071-45b6-a25f-eeeb8e79c5d1.json  maximum_clique_0077ac23-faae-401b-965b-a186fc3f3861.json  maximum_clique_007a3ee6-09c3-4ed9-88c6-2be18089a350.json  maximum_clique_00990891-1235-4ddf-b0d8-cfc2f6263a4e.json  maximum_clique_00a172a2-30dc-48ec-af61-eee58b09441d.json  maximum_clique_00e96e4a-ad9c-4e99-800e-6e0c0df1cee1.json  maximum_clique_01289783-016a-47a7-bf10-852ceb5a45d4.json  maximum_clique_01317efe-e7f5-4c62-95e2-de8e518abd72.json  maximum_clique_015dfc04-f1b6-4e8f-a642-c52a530a1072.json  maximum_clique_01644736-1c7a-4b95-9e73-20c7cd730ae4.json  maximum_clique_017163b2-e30d-4e07-b615-117acc462fd1.json  maximum_clique_017405e3-77c3-45f3-807d-5663400747af.json  maximum_clique_018bff88-0857-4ebc-9d1e-7242079f0336.json  maximum_clique_019b4324-beca-4aff-8b0b-ff72bf7d0e84.json  maximum_clique_019cde62-a9de-4b8f-b014-722c0501a0cb.json  maximum_clique_01a34727-e156-4c0d-bff4-6a4cd8a24056.json  maximum_clique_01b9b28f-02f9-46db-af7a-84404b99473a.json  maximum_clique_02042fa6-58fc-465b-82c3-6c8bd456b564.json  (+3484 more)
pmc/: pmc.py
(+2 files in other folders)
